--- a/chat.html
+++ b/chat.html
@@ -21,7 +21,7 @@ body {
   border: 1px solid #ccc;  
   margin: 10px 10px 10px 10px;
   padding: 10px 10px 10px 10px;
-  background-color: #ffff00;
+  background-color: #d3d3d3;
 }
 .right {
   display: block;
@@ -30,7 +30,7 @@ body {
   border: 1px solid #ccc; 
   margin: 10px 10px 10px 10px;
   padding: 10px 10px 10px 10px;
-  background-color: #00ffff;
+  background-color: #778899;
 }
 .msg_bot {
   border: 0;
